--- a/style.css
+++ b/style.css
@@ -131,7 +131,11 @@ body{
 header{
     width: 100vw;
     /* background:linear-gradient(0.15turn, #003f82, #ebf8e1, #4faaffd3); */
-    background-color: #002f61cb;
+    /* background-color: #002f61cb; */
+    background-image: url('images/pokem.jpg');
+    background-position-x: left;
+    background-position-y: bottom;
+    background-size: 300%;
     z-index: 10;
     display: flex;
     justify-content: space-between;
@@ -587,8 +591,13 @@ header label:hover{
     height: 35vh;
     left: 9vw;
     width: 30vw;
-    color: rgba(255, 255, 255, 0.966) ;
-    background: #5EAC4F;
+    color: #4e4e4e;
+    /* background: #d4d4d4d8; */
+    background: linear-gradient( #e9e9e9ec ,#858585e3);
+    /* background-image: url('images/plan2.jpg');
+    background-position-y: bottom;
+    background-position-x: right;
+    background-size:450% 350% ; */
     /* border-radius: 30px; */
     padding: 3vh 2vw;
     display: flex;
@@ -596,6 +605,7 @@ header label:hover{
     position: absolute;
     clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 80% 91%, 50% 75%, 0% 75%);
     border-radius: 15px;
+    opacity: 0.9;
 }
 .pokemon-container{
     display: grid;
@@ -605,7 +615,6 @@ header label:hover{
     row-gap: 2vh;
     grid-template-columns: repeat(5,14vw);
     grid-template-rows: repeat(51, 47.4vh);
-    color: black;
     padding: 0; 
     margin-left: 20vw; 
     margin-top: 35vh;
@@ -636,7 +645,9 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #868686;
+    /* background: #868686; */
+    background-image: url('images/plan2.jpg');
+    background-position: top;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -651,7 +662,8 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #868686;
+    background-image: url('images/plan2.jpg');
+    background-position: top;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
@@ -693,7 +705,7 @@ header label:hover{
     border-radius: 10px;
     top: 30vh;
     position: absolute;
-    color: #646464;
+    color: #4e4e4e;
 }
 .contenedor_ordenar h4{
     position: relative;
@@ -735,7 +747,7 @@ header label:hover{
     border-radius: 10px;
     margin-top: 60vh;
     position: absolute;
-    color: #646464;
+    color: #4e4e4e;
 }
 .contenedor_filtro h4{
     position: absolute;
@@ -757,7 +769,7 @@ header label:hover{
 } */
 .contenedor_filtro a{
     text-decoration: none;
-    color: #555555;
+    color: #4e4e4e;
     padding: 0;
 }
 .contenedor_filtro li{
@@ -780,10 +792,13 @@ header label:hover{
     display: flex;
     position: absolute;
     margin-left: 0;
-    background-color:#525252d7;
+    background:url('images/rock.jpg');
+    background-position-x: right;
+    background-position-y:bottom;
+    background-size: 400% 350%;
     font-size: 1.4em;
     width: 70vw;
-    color: #fcfcfc;
+    color: #ffffff;
     margin-top: -10vh;
     text-align: left;
     border-radius: 5px;
@@ -793,7 +808,9 @@ header label:hover{
     display: flex;
     position: absolute;
     margin-left: 0;
-    background-color:#0202c0cb;
+    background:url('images/pokem.jpg');
+    background-position: bottom;
+    opacity: 0.9;
     font-size: 1.4em;
     width: 70vw;
     color: #fcfcfc;
@@ -806,7 +823,10 @@ header label:hover{
     display: flex;
     position: absolute;
     margin-left: 0;
-    background-color:#c4a000c9;
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x: left;
+    background-position-y: bottom;
+    opacity: 0.9;
     font-size: 1.4em;
     width: 70vw;
     color: #fcfcfc;
@@ -819,7 +839,9 @@ header label:hover{
     display: flex;
     position: absolute;
     margin-left: 0;
-    background-color:#ce0279dc;
+    background-image: url('images/battle.jpg');
+    background-position: top;
+    background-size: 400% 500%;
     font-size: 1.4em;
     width: 70vw;
     color: #fcfcfc;
@@ -832,7 +854,11 @@ header label:hover{
     display: flex;
     position: absolute;
     margin-left: 0;
-    background-color:#dbd800cc;
+    /* background-color:#dbd800cc; */
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x:right;
+    background-position-y: bottom;
+    opacity: 0.9;
     font-size: 1.4em;
     width: 70vw;
     color: #fcfcfc;
@@ -1056,7 +1082,10 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #a8a7a7;
+    /* background: #a8a7a7; */
+    background:url('images/rock.jpg');
+    background-position: bottom;
+    opacity: 0.9;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -1067,7 +1096,10 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #a8a7a7;
+    /* background: #a8a7a7; */
+    background:url('images/rock.jpg');
+    background-position: bottom;
+    opacity: 0.9;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
@@ -1116,7 +1148,9 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #0202c0cb;
+    /* background: #0202c0cb; */
+    background:url('images/pokem.jpg');
+    background-position: bottom;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -1127,7 +1161,8 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #0202c0cb;
+    background:url('images/pokem.jpg');
+    background-position: bottom;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
@@ -1175,7 +1210,10 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #c4a000c9;
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x: left;
+    background-position-y: bottom;
+    opacity: 0.9;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -1186,7 +1224,11 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #c4a000c9;
+    /* background: #c4a000c9; */
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x: left;
+    background-position-y: bottom;
+    opacity: 0.9;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
@@ -1234,7 +1276,9 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #ce0279dc;
+    background-image: url('images/battle.jpg');
+    background-position: top;
+    opacity: 0.9;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -1245,7 +1289,8 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #ce0279dc;
+    background-image: url('images/battle.jpg');
+    background-position: top;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
@@ -1293,7 +1338,11 @@ header label:hover{
     color: rgb(255, 255, 255);
     text-transform: capitalize;
     margin:0 0 1vh 0;
-    background: #dbd800cc;
+    /* background: #dbd800cc; */
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x:center;
+    background-position-y: bottom;
+    opacity: 0.9;
     padding-top: 1.8vh;
     padding-bottom: 1.8vh;
     border-top-left-radius: 10px;
@@ -1304,7 +1353,10 @@ header label:hover{
     width:5vw ;
     margin-left: 4.5vw;
     color: rgb(255, 255, 255);
-    background: #dbd800cc;
+    background-image: url('images/pika_fnd.jpg');
+    background-position-x:center;
+    background-position-y: bottom;
+    opacity: 0.9;
     padding: 0.7vh 0.7vw;
     border-top-left-radius: 5px;
     border-top-right-radius:5px;
